# RAG_chat_assistant

./: .aiexclude  .gitignore  ARCHITECTURE.md  README.md
backend/: .env.example  main.py  pyproject.toml
backend/api/: __init__.py  chat.py  documents.py
backend/core/: __init__.py  dependencies.py
backend/domain/: models.py
backend/domain copy/interfaces/: checkpointer.py  chunker.py  embedding_provider.py
backend/domain/interfaces/: __init__.py  document_parser.py  document_store.py  llm_provider.py  vector_store.py
backend/graph/: __init__.py  builder.py  nodes.py  state.py
backend/infrastructure/: __init__.py  chroma_vector_store.py  database.py  orm_models.py  sqlite_document_store.py
backend/services/: __init__.py  checkpointer.py  chunker.py  embedding.py  ingestion.py  llm.py  parsers.py
documentation/: api_doc.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/Chat/: ChatInput.tsx  ChatInterface.tsx  MessageList.tsx
frontend/src/components/Sidebar/: ConversationHistory.tsx  DocumentManager.tsx  Sidebar.tsx
frontend/src/store/: chatSlice.ts  documentSlice.ts  index.ts
