[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.139.2",
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
    "pymupdf4llm>=0.0.17",
    "pymupdf>=1.25.1",
    "chromadb>=0.6.1",
    "google-genai>=0.4.0",
    "langchain-text-splitters>=0.3.5",
    "python-multipart>=0.0.20",
    "langgraph>=1.2.9",
    "langchain-google-genai>=4.2.7",
    "langchain-core>=1.4.9",
]
